--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -10,10 +10,19 @@ h1 {
     margin-top: 40px;
 }
 
+.container {
+    margin: o auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
 @media (max-width:414px) {
     h1  {
         font-size: 36px;
     }
 
+    .container {
+        flex-direction: column;
+    }
 
 }
