--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -11,8 +11,7 @@ h1 {
 }
 
 .container {
-    margin: 0px 5vw;
-    margin-top: 47px;
+    margin: 47px 5vw 47px 5vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,10 +22,17 @@ h1 {
     width:117px;
     height: 146px;
     margin: 17px 17px;
-    background: #A7E9AF;
-    background-image: url(../Images/front.png);
-    background-size: cover;
-    
+    background: #A7E9AF;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px; 
+}
+
+img {
+    width: 100px;
+    height: 100px;
+   
 }
 
 @media (max-width:414px) {
