--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -10,8 +10,7 @@ h1 {
     margin-top: 40px;
 }
 
-.container {
-    margin: 47px 5vw 47px 5vw;
+.game {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,18 +20,43 @@ h1 {
 .card {
     width:117px;
     height: 146px;
-    margin: 17px 17px;
+    margin: 17px;
     background: #A7E9AF;  
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 5px; 
+    position: relative;
+    border: 2px solid lime;
+    transition: all .5s;
+    transform-style: preserve-3d;
 }
+
+.card.flip {
+    transform: rotateY(180deg);
+}
+
+.front-face, .back-face {
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.back-face {
+    transform: rotateY(180deg);
+}
+
+.card:active .back-face {
+    transform: rotateY(0deg);
+}
+
+.card:active .front-face {
+    transform: rotateY(-180deg);
+}
+
 
 img {
     width: 100px;
-    height: 100px;
-   
+    height: 100px;  
 }
 
 @media (max-width:414px) {
@@ -40,7 +64,7 @@ img {
         font-size: 36px;
     }
 
-    .container {
+    .game {
         flex-direction: column;
     }
 
