--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -59,6 +59,27 @@ img {
     height: 100px;  
 }
 
+section {
+    background-color: #f0a202;
+    font-family: "Montserrat", sans-serif;
+    color: #183059;
+    padding: 20px;
+    border-radius: 5px;
+    position: absolute;
+    right: 10px;
+    top: 20px;
+    text-align: center;
+}
+
+.timer {
+    font-size: 4em;
+}
+
+.label {
+    font-size: 1em;
+}
+}
+
 @media (max-width:414px) {
     h1  {
         font-size: 36px;
