--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -15,6 +15,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    margin: 30px 40px;
 }
 
 .card {
@@ -67,7 +68,7 @@ section {
     border-radius: 5px;
     position: absolute;
     right: 10px;
-    top: 20px;
+    top: 10px;
     text-align: center;
 }
 
@@ -77,7 +78,6 @@ section {
 
 .label {
     font-size: 1em;
-}
 }
 
 @media (max-width:414px) {
@@ -89,4 +89,16 @@ section {
         flex-direction: column;
     }
 
+    section {
+        top: 80px;
+        padding: 7px;
+    }
+
+    .timer {
+        font-size: 1.5em;
+    }
+    
+    .label {
+        font-size: 0.5em;
+    }
 }
