--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -61,9 +61,10 @@ img {
 }
 
 section {
-    background-color: #f0a202;
+    background: #A7E9AF;  
     font-family: "Montserrat", sans-serif;
-    color: #183059;
+    font-weight: bold;
+    color: #5C913B;
     padding: 20px;
     border-radius: 5px;
     position: absolute;
