tirei o background e a borda do cronometro

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -63,7 +63,7 @@ img {
 
 section {
     display: none;
-    background: #A7E9AF;  
+    background: #EEF9BF;  
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
     color: #5C913B;
